locales have been added

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,7 +16,7 @@
 						<span class="issue_card_title"> <%= issue["subject"] %> </span>
 						<span class="issue_card_author"><i class="bi bi-person"></i> <%= issue["author"] %> </span>
 						<% if issue["executor"] == '' || issue["executor"].nil? %>
-							<span class="issue_card_executor_not_set"><i class="bi bi-hammer"></i> Не назначен</span>
+							<span class="issue_card_executor_not_set"><i class="bi bi-hammer"></i> <%=l :executor_not_set %></span>
 						<% else %>
 							<span class="issue_card_executor"><i class="bi bi-hammer"></i> <%= issue["executor"] %> </span>
 						<% end %>
