--- a/app/views/settings/_dashboard_settings.erb
+++ b/app/views/settings/_dashboard_settings.erb
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <td colspan="2">Цвета заголовков колонок статусов</td>
+      <td colspan="2"> <%=l :settings_header %> </td>
     </tr>
   </thead>
   <tbody>
