--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -41,9 +41,8 @@
 .issue_card {
     display: flex;
     width: 95%;
-    height: 100px;
     border-radius: 5px;
-    height: fit-content;
+    height: auto;
     min-height: 50px;
     margin-top: 5px;
     padding-top: 5px;
