--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,6 +4,14 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <% end %>
 
+<label class="select_project"> <%=l :field_project %>
+  <select name="project">
+  <% @projects.each do |project| %>
+	<option <%= project["selected"] %> value="<%= project['id'] %>"><%= project["name"] %></option>
+  <% end %>
+  </select>
+</label>
+
 <div class="issues_container">
 	<% @statuses.each do |status| %>
 		<div class="status_column" data-id="<%= status['id'] %>">
@@ -26,3 +34,7 @@
 		</div>
 	<% end %>
 </div>
+
+<script>
+	init();
+</script>
