--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'style', plugin: 'dashboard' %>
 	<%= javascript_include_tag 'script', plugin: 'dashboard' %>
+	<%= javascript_include_tag 'Sortable.min', plugin: 'dashboard' %>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <% end %>
 
@@ -15,12 +16,12 @@
 <div class="issues_container">
 	<% @statuses.each do |status| %>
 		<div class="status_column" data-id="<%= status['id'] %>">
-			<div class="status_column_header" style="background-color: <%= status["color"] %>">
+			<div class="status_column_header" style="border-bottom-color: <%= status["color"] %>">
 				<span> <%= status["name"] %> </span>
 			</div>
 			<div class="status_column_issues">
 				<% status["issues"].each do |issue| %>
-					<div draggable="true" class="issue_card" data-status="<%= status['id'] %>" data-id="<%= issue['id'] %>" onclick="goToIssue(<%= issue['id'] %>)">
+					<div class="issue_card" data-status="<%= status['id'] %>" data-id="<%= issue['id'] %>" onclick="goToIssue(<%= issue['id'] %>)">
 						<div class="issue_card_header">
 							<span class="issue_card_header_date"><%= issue["created_at"] %></span>
 							<div class="issue_card_header_project" style="background-color: <%= @projects[issue['project_id']]['color'] %>"><%= issue["project"] %></div>
