--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -7,25 +7,25 @@
 .status_column {
     display: inline-flex;
     border-radius: 5px;
-    background-color: rgb(236, 236, 236);
     width: 100%;
-    height: 100%;
-    margin: 10px;
+    margin-left: 3px;
+    margin-right: 3px;
     flex-direction: column;
-    box-shadow: 0px 0px 5px 0px gray;
 }
 
 .status_column_header {
     display: flex;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    background-color: rgb(169, 144, 238);
     width: 100%;
     height: 50px;
     align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: large;
+    font-size: medium;
+    font-weight: 500;
+    margin-bottom: 5px;
+    border-bottom: 2px solid;
+}
+
+.status_column_header span {
+    margin-left: 10px;
 }
 
 .status_column_issues {
@@ -47,7 +47,7 @@
     margin-top: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
-    background-color: white;
+    background-color: rgb(240, 240, 240);
     margin-bottom: 5px;
     align-items: flex-start;
     flex-direction: column;
@@ -56,7 +56,7 @@
 }
 
 .issue_card:hover {
-    background-color: rgb(248, 248, 248);
+    background-color: rgb(220, 220, 220);
     cursor: pointer;
 }
 
