--- a/app/views/settings/_dashboard_settings.erb
+++ b/app/views/settings/_dashboard_settings.erb
@@ -4,15 +4,13 @@
     <th colspan="2"> <%=l :settings_header_statuses %> </td>
   </tr>
   <% IssueStatus.sorted().each do |status| %>
-    <% if !status.is_closed %>
-      <% property_name = "status_color_" + status.id.to_s %>
-      <tr>
-        <td> <%= status.name %> </th>
-        <td>
-          <input type="color" id="settings_<%= property_name %>" value="<%= settings[property_name] %>" name="settings[<%= property_name %>]">
-        </td>
-      </tr>
-    <% end %>
+    <% property_name = "status_color_" + status.id.to_s %>
+    <tr>
+      <td> <%= status.name %> </th>
+      <td>
+        <input type="color" id="settings_<%= property_name %>" value="<%= settings[property_name] %>" name="settings[<%= property_name %>]">
+      </td>
+    </tr>
   <% end %>
   <tr>
     <th colspan="2"> <%=l :settings_header_projects %> </td>
@@ -26,5 +24,20 @@
       </td>
     </tr>
   <% end %>
+  <tr>
+    <th colspan="2"> <%=l :settings_header_other %> </td>
+  </tr>
+  <tr>
+    <td> <%=l :settings_display_closed_statuses %> </th>
+    <td>
+      <%= check_box_tag "settings[display_closed_statuses]", false, @settings['display_closed_statuses'] %>
+    </td>
+  </tr>
+  <tr>
+    <td> <%=l :settings_display_minimized_closed_issue_cards %> </th>
+    <td>
+      <%= check_box_tag "settings[display_minimized_closed_issue_cards]", false, @settings['display_minimized_closed_issue_cards'] %>
+    </td>
+  </tr>
   </tbody>
 </table>
