--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -35,12 +35,21 @@
     flex-direction: column;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    align-items: center;
+}
+
+.status_column_closed_issues {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .issue_card {
     display: flex;
-    width: 96%;
+    width: 100%;
     border-radius: 5px;
     height: auto;
     min-height: 50px;
@@ -48,11 +57,33 @@
     padding-top: 5px;
     padding-bottom: 5px;
     background-color: rgb(240, 240, 240);
+    align-self: center;
     margin-bottom: 5px;
     align-items: flex-start;
     flex-direction: column;
     justify-content: center;
     box-shadow: 0px 0px 2px 0px lightgray;
+}
+
+.minimized_issue_card {
+    display: inline-flex;
+    width: min-content;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: auto;
+    border-radius: 5px;
+    background-color: rgb(240, 240, 240);
+}
+
+.minimized_issue_card span {
+    padding: 5px;
+}
+
+.minimized_issue_card:hover {
+    background-color: rgb(220, 220, 220);
+    cursor: pointer;
 }
 
 .issue_card:hover {
