--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,15 +23,16 @@
 			</div>
 			<div class="<% status[:is_closed] ? ("status_column_closed_issues") : ("status_column_issues") %>">
 				<% @issues.select {|issue| issue[:status_id] == status[:id] }.each do |issue| %>
+					<% project_color = @projects.select {|item| item[:id] == issue[:project].id }[0][:color] %>
 					<% if status[:is_closed] && Setting.plugin_dashboard['display_minimized_closed_issue_cards'] %>
-						<div class="minimized_issue_card" data-status="<%= status[:id] %>" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
+						<div class="minimized_issue_card" style="border-bottom-color: <%= project_color %>" data-status="<%= status[:id] %>" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
 							<span> <%= "#" + issue[:id].to_s %> </span>
 						</div>
 					<% else %>
 						<div class="issue_card" data-status="<%= status[:id] %>" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
 							<div class="issue_card_header">
 								<span class="issue_card_header_date"><%= issue[:created_at] %></span>
-								<div class="issue_card_header_project" style="background-color: <%= @projects.select {|item| item[:id] == issue[:project].id }[0][:color] %>"><%= issue[:project].name %></div>
+								<div class="issue_card_header_project" style="background-color: <%= project_color %>"><%= issue[:project].name %></div>
 							</div>
 							<span class="issue_card_title"> <%= issue[:subject] %> </span>
 							<span class="issue_card_author"><i class="bi bi-person"></i> <%= issue[:author] %> </span>
