--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -74,6 +74,7 @@
     margin-bottom: 5px;
     height: auto;
     border-radius: 5px;
+    border-bottom: 2px solid;
     background-color: rgb(240, 240, 240);
 }
 
