--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,15 +5,29 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <% end %>
 
-<div class="select_project_container">
-	<% @projects.each do |project| %>
-		<% if project[:id].to_s == @selected_project_id.to_s %>
-			<div class="select_project_item select_project_item_selected" style="background-color: <%= project[:color] %>" data-id="<%= project[:id] %>"><%= project[:name] %></div>
-		<% else %>
-			<div class="select_project_item" style="background-color: <%= project[:color] %>" data-id="<%= project[:id] %>"><%= project[:name] %></div>
+<% if Setting.plugin_dashboard['use_drop_down_menu'] %>
+	<label class="select_project"> <%=l :field_project %>
+		<select name="project">
+			<% @projects.each do |project| %>
+				<% if project[:id].to_s == @selected_project_id.to_s %>
+					<option selected value="<%= project[:id] %>"><%= project[:name] %></option>
+				<% else %>
+					<option value="<%= project[:id] %>"><%= project[:name] %></option>
+				<% end %>
+			<% end %>
+		</select>
+	</label>
+<% else %>
+	<div class="select_project_container">
+		<% @projects.each do |project| %>
+			<% if project[:id].to_s == @selected_project_id.to_s %>
+				<div class="select_project_item select_project_item_selected" style="background-color: <%= project[:color] %>" data-id="<%= project[:id] %>"><%= project[:name] %></div>
+			<% else %>
+				<div class="select_project_item" style="background-color: <%= project[:color] %>" data-id="<%= project[:id] %>"><%= project[:name] %></div>
+			<% end %>
 		<% end %>
-	<% end %>
-</div>
+	</div>
+<% end %>
 
 <div class="issues_container">
 	<% @statuses.each do |status| %>
