--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -4,6 +4,10 @@
     width: 100%;
 }
 
+.select_project {
+    margin-left: 10px;
+}
+
 .status_column {
     display: inline-flex;
     border-radius: 5px;
