--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -10,7 +10,6 @@
 
 .status_column {
     display: inline-flex;
-    border-radius: 5px;
     width: 100%;
     margin-left: 3px;
     margin-right: 3px;
@@ -20,7 +19,7 @@
 .status_column_header {
     display: flex;
     width: 100%;
-    height: 50px;
+    height: min-content;
     align-items: center;
     font-size: medium;
     font-weight: 500;
@@ -29,13 +28,13 @@
 }
 
 .status_column_header span {
-    margin-left: 10px;
+    padding: 8px;
 }
 
 .status_column_issues {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     flex-direction: column;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -44,7 +43,7 @@
 .status_column_closed_issues {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     flex-direction: row;
     flex-wrap: wrap;
     border-bottom-left-radius: 5px;
@@ -54,29 +53,24 @@
 .issue_card {
     display: flex;
     width: 100%;
+    margin: 2px;
     border-radius: 5px;
-    height: auto;
-    min-height: 50px;
-    margin-top: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    height: min-content;
     background-color: rgb(240, 240, 240);
     align-self: center;
-    margin-bottom: 5px;
     align-items: flex-start;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 0px 0px 2px 0px lightgray;
 }
 
 .minimized_issue_card {
     display: inline-flex;
+    flex: auto;
     width: min-content;
     align-items: center;
     justify-content: center;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    height: auto;
+    margin: 2px;
+    height: min-content;
     border-radius: 5px;
     border-bottom: 2px solid;
     background-color: rgb(240, 240, 240);
@@ -139,13 +133,17 @@
 }
 
 .issue_card_header_project {
+    display: flex;
     margin-left: auto;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
     margin-right: 10px;
-    border-radius: 15px;
+    border-radius: 200px;
+    width: fit-content;
+    height: fit-content;
+    text-align: center;
     color: rgb(255, 255, 255);
     font-size: smaller;
 }
@@ -162,13 +160,14 @@
     padding-bottom: 5px;
     padding-left: 8px;
     padding-right: 8px;
-    border-radius: 15px;
-    margin-right: 10px;
+    border-radius: 200px;
+    margin-right: 5px;
     color: white;
     opacity: 0.5;
     min-width: fit-content;
     align-items: center;
     justify-content: center;
+    transition: opacity .1s ease-in-out;
 }
 
 .select_project_item:hover {
