added drag-and-drop feature

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,17 +6,15 @@
 <% end %>
 
 <% if @use_drop_down_menu %>
-	<label class="select_project"> <%=l :field_project %>
-		<select name="project">
-			<% @projects.each do |project_id, project| %>
-				<% if project_id == @selected_project_id %>
-					<option selected value="<%= project_id %>"><%= project[:name] %></option>
-				<% else %>
-					<option value="<%= project_id %>"><%= project[:name] %></option>
-				<% end %>
+	<select id="select_project">
+		<% @projects.each do |project_id, project| %>
+			<% if project_id == @selected_project_id %>
+				<option selected value="<%= project_id %>"><%= project[:name] %></option>
+			<% else %>
+				<option value="<%= project_id %>"><%= project[:name] %></option>
 			<% end %>
-		</select>
-	</label>
+		<% end %>
+	</select>
 <% else %>
 	<div class="select_project_container">
 		<% @projects.each do |project_id, project| %>
@@ -39,27 +37,22 @@
 				<% @issues.select { |issue| issue[:status_id] == status_id }.each do |issue| %>
 					<% project_color = @projects[issue[:project_id]][:color] %>
 					<% project_name = @projects[issue[:project_id]][:name] %>
-					<% if status[:is_closed] && @display_minimized_closed_issue_cards %>
-						<div class="minimized_issue_card" style="border-bottom-color: <%= project_color %>" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
-							<span> <%= "#" + issue[:id].to_s %> </span>
-						</div>
-					<% else %>
-						<div class="issue_card" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
-							<div class="issue_card_header">
-								<span class="issue_card_header_date"><%= issue[:created_at] %></span>
-								<% if @show_project_badge %>
-									<div class="issue_card_header_project" style="background-color: <%= project_color %>"><%= project_name %></div>
-								<% end %>
-							</div>
-							<span class="issue_card_title"> <%= issue[:subject] %> </span>
-							<span class="issue_card_author"><i class="bi bi-person"></i> <%= issue[:author] %> </span>
-							<% if issue[:executor] == '' || issue[:executor].nil? %>
-								<span class="issue_card_executor_not_set"><i class="bi bi-hammer"></i> <%=l :executor_not_set %></span>
-							<% else %>
-								<span class="issue_card_executor"><i class="bi bi-hammer"></i> <%= issue[:executor] %> </span>
+					<div class="issue_card" style="border-color: <%= project_color %>" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
+						<span class="issue_card_id"> <%= "#" + issue[:id].to_s %> </span>
+						<div class="issue_card_header">
+							<span class="issue_card_header_date"><%= issue[:created_at] %></span>
+							<% if @show_project_badge %>
+								<div class="issue_card_header_project" style="background-color: <%= project_color %>"><%= project_name %></div>
 							<% end %>
 						</div>
-					<% end %>
+						<span class="issue_card_title"> <%= issue[:subject] %> </span>
+						<span class="issue_card_author"><i class="bi bi-person"></i> <%= issue[:author] %> </span>
+						<% if issue[:executor] == '' || issue[:executor].nil? %>
+							<span class="issue_card_executor_not_set"><i class="bi bi-hammer"></i> <%=l :executor_not_set %></span>
+						<% else %>
+							<span class="issue_card_executor"><i class="bi bi-hammer"></i> <%= issue[:executor] %> </span>
+						<% end %>
+					</div>
 				<% end %>
 			</div>
 		</div>
@@ -67,5 +60,7 @@
 </div>
 
 <script>
-	init();
+	$(function() {
+		init();
+	})
 </script> 
