--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,180 +1,197 @@
-.issues_container {
-    display: flex;
-    height: 100%;
-    width: 100%;
-}
-
-.select_project {
-    margin-left: 10px;
-}
-
-.status_column {
-    display: inline-flex;
-    width: 100%;
-    margin-left: 3px;
-    margin-right: 3px;
-    flex-direction: column;
-}
-
-.status_column_header {
-    display: flex;
-    width: 100%;
-    height: min-content;
-    align-items: center;
-    font-size: medium;
-    font-weight: 500;
-    margin-bottom: 5px;
-    border-bottom: 2px solid;
-}
-
-.status_column_header span {
-    padding: 8px;
-}
-
-.status_column_issues {
-    display: flex;
-    width: 100%;
-    height: fit-content;
-    flex-direction: column;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.status_column_closed_issues {
-    display: flex;
-    width: 100%;
-    height: fit-content;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.issue_card {
-    display: flex;
-    width: 100%;
-    margin: 4px;
-    border-radius: 5px;
-    height: min-content;
-    background-color: rgb(240, 240, 240);
-    align-self: center;
-    align-items: flex-start;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.minimized_issue_card {
-    display: inline-flex;
-    flex: auto;
-    width: min-content;
-    align-items: center;
-    justify-content: center;
-    margin: 2px;
-    height: min-content;
-    border-radius: 5px;
-    border-bottom: 2px solid;
-    background-color: rgb(240, 240, 240);
-}
-
-.minimized_issue_card span {
-    padding: 5px;
-}
-
-.minimized_issue_card:hover {
-    background-color: rgb(220, 220, 220);
-    cursor: pointer;
-}
-
-.issue_card:hover {
-    background-color: rgb(220, 220, 220);
-    cursor: pointer;
-}
-
-.issue_card span {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: small;
-}
-
-.issue_card .issue_card_title {
-    padding-top: 5px;
-    font-size: medium; 
-    font-weight: 600;
-}
-
-.issue_card .issue_card_author {
-    padding-top: 5px;
-}
-
-.issue_card .issue_card_author i {
-    color: green;
-    font-size: medium;
-}
-
-.issue_card .issue_card_executor {
-    padding-bottom: 5px;
-}
-
-.issue_card .issue_card_executor_not_set {
-    color: red;
-    padding-bottom: 5px;
-}
-
-.issue_card .issue_card_executor i {
-    color: purple;
-    font-size: medium;
-}
-
-.issue_card_header {
-    display: flex;
-    padding-top: 10px;
-    align-items: center;
-    width: 100%;
-}
-
-.issue_card_header_project {
-    display: flex;
-    margin-left: auto;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 10px;
-    border-radius: 200px;
-    width: fit-content;
-    height: fit-content;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-size: smaller;
-}
-
 .select_project_container {
-    display: flex;
-    flex-direction: row;
-    margin-left: 10px;
+	display: flex;
+	flex-direction: row;
+	margin-left: 10px;
 }
 
 .select_project_item {
-    display: inline-flex;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 8px;
-    padding-right: 8px;
-    border-radius: 200px;
-    margin-right: 5px;
-    color: white;
-    opacity: 0.5;
-    min-width: fit-content;
-    align-items: center;
-    justify-content: center;
-    transition: opacity .1s ease-in-out;
+	display: inline-flex;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 8px;
+	padding-right: 8px;
+	border-radius: 200px;
+	margin-right: 5px;
+	color: white;
+	opacity: 0.5;
+	min-width: fit-content;
+	align-items: center;
+	justify-content: center;
+	transition: opacity .1s ease-in-out;
 }
 
 .select_project_item:hover {
-    opacity: 1;
-    cursor: pointer;
+	opacity: 1;
+	cursor: pointer;
 }
- 
+
 .select_project_item_selected {
-    opacity: 1;
+	opacity: 1;
+}
+
+.issues_container {
+	display: flex;
+	height: 100%;
+	width: 100%;
+}
+
+.status_column {
+	display: inline-flex;
+	width: 100%;
+	margin-left: 3px;
+	margin-right: 3px;
+	flex-direction: column;
+}
+
+.status_column_header {
+	display: flex;
+	width: 100%;
+	height: min-content;
+	align-items: center;
+	font-size: medium;
+	font-weight: 500;
+	margin-bottom: 5px;
+	border-bottom: 2px solid;
+}
+
+.status_column_header span {
+	padding: 8px;
+}
+
+.status_column_issues {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+.status_column_closed_issues {
+	display: flex;
+	width: 100%;
+	height: fit-content;
+	flex-direction: row;
+	flex-wrap: wrap;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+
+.status_column_issues .issue_card {
+	display: flex;
+	width: 100%;
+	margin: 3px;
+	border-radius: 5px;
+	height: min-content;
+	background-color: rgb(240, 240, 240);
+	align-self: center;
+	align-items: flex-start;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.status_column_closed_issues .issue_card {
+	display: inline-flex;
+	flex: auto;
+	width: min-content;
+	align-items: center;
+	justify-content: center;
+	margin: 3px;
+	height: min-content;
+	border-radius: 5px;
+	border-bottom: 2px solid;
+	background-color: rgb(240, 240, 240);
+}
+
+.status_column_issues .issue_card span {
+	padding: 5px;
+    padding-left: 10px;
+	padding-right: 10px;
+	font-size: small;
+}
+
+.issue_card:hover {
+	background-color: rgb(220, 220, 220);
+	cursor: pointer;
+}
+
+.status_column_issues .issue_card .issue_card_title {
+	padding-top: 5px;
+	font-size: medium;
+	font-weight: 600;
+}
+
+.status_column_closed_issues .issue_card .issue_card_title {
+    display: none;
+}
+
+.status_column_issues .issue_card .issue_card_author {
+	padding-top: 5px;
+}
+
+.status_column_closed_issues .issue_card .issue_card_author {
+    display: none;
+}
+
+.status_column_issues .issue_card .issue_card_author i {
+	color: green;
+	font-size: medium;
+}
+
+.status_column_issues .issue_card .issue_card_executor {
+	padding-bottom: 5px;
+}
+
+.status_column_closed_issues .issue_card .issue_card_executor {
+    display: none;
+}
+
+.status_column_issues .issue_card .issue_card_executor_not_set {
+	color: red;
+	padding-bottom: 5px;
+}
+
+.status_column_closed_issues .issue_card .issue_card_executor_not_set {
+    display: none;
+}
+
+.status_column_issues .issue_card .issue_card_executor i {
+	color: purple;
+	font-size: medium;
+}
+
+.status_column_issues .issue_card .issue_card_header {
+	display: flex;
+	padding-top: 10px;
+	align-items: center;
+	width: 100%;
+}
+
+.status_column_closed_issues .issue_card .issue_card_header {
+    display: none;
+}
+
+.status_column_issues .issue_card_header_project {
+	display: flex;
+	margin-left: auto;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-right: 10px;
+	border-radius: 200px;
+	width: fit-content;
+	height: fit-content;
+	text-align: center;
+	color: rgb(255, 255, 255);
+	font-size: smaller;
+}
+
+.status_column_closed_issues .issue_card .issue_card_id {
+    display: block;
+    padding: 5px;
+}
+
+.status_column_issues .issue_card .issue_card_id {
+    display: none;
 }
