--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -40,7 +40,7 @@
 					<div class="issue_card" style="border-color: <%= project_color %>" data-id="<%= issue[:id] %>" onclick="goToIssue(<%= issue[:id] %>)">
 						<span class="issue_card_id"> <%= "#" + issue[:id].to_s %> </span>
 						<div class="issue_card_header">
-							<span class="issue_card_header_date"><%= issue[:created_at] %></span>
+							<span class="issue_card_header_date"><%= I18n.l(issue[:created_on], format: :long) %></span>
 							<% if @show_project_badge %>
 								<div class="issue_card_header_project" style="background-color: <%= project_color %>"><%= project_name %></div>
 							<% end %>
