Rename whole project

--- a/app/views/settings/_dashboard_alt_settings.erb
+++ b/app/views/settings/_dashboard_alt_settings.erb
@@ -1,5 +1,5 @@
 <% content_for :header_tags do %>
-	<%= javascript_include_tag 'settings', plugin: 'dashboard' %>
+	<%= javascript_include_tag 'settings', plugin: 'dashboard_alt' %>
 <% end %>
 
 <table>
