--- a/app/views/dashboard_alt/index.html.erb
+++ b/app/views/dashboard_alt/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'style', plugin: 'dashboard' %>
-	<%= javascript_include_tag 'script', plugin: 'dashboard' %>
-	<%= javascript_include_tag 'Sortable.min', plugin: 'dashboard' %>
+    <%= stylesheet_link_tag 'style', plugin: 'dashboard_alt' %>
+	<%= javascript_include_tag 'script', plugin: 'dashboard_alt' %>
+	<%= javascript_include_tag 'Sortable.min', plugin: 'dashboard_alt' %>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <% end %>
 
